package dmParticleDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.particle.proto";
option java_outer_classname = "Particle";

enum EmitterType
{
    EMITTER_TYPE_SPHERE = 0;
    EMITTER_TYPE_CONE   = 1;
    EMITTER_TYPE_BOX    = 2;
};

enum PlayMode
{
    PLAY_MODE_ONCE  = 0;
    PLAY_MODE_LOOP  = 1;
}

enum EmissionSpace
{
    EMISSION_SPACE_WORLD    = 0;
    EMISSION_SPACE_EMITTER  = 1;
}

message Texture_t
{
    required string name    = 1 [(resource)=true];
    required uint32 t_x     = 2;
    required uint32 t_y     = 3;
}

message SplinePoint
{
    required float x = 1;
    required float y = 2;
    required float t_x = 3;
    required float t_y = 4;
}

enum EmitterKey
{
    EMITTER_KEY_SPAWN_DELAY         = 0;
    EMITTER_KEY_SPHERE_RADIUS       = 1;
    EMITTER_KEY_CONE_RADIUS         = 2;
    EMITTER_KEY_CONE_HEIGHT         = 3;
    EMITTER_KEY_BOX_WIDTH           = 4;
    EMITTER_KEY_BOX_HEIGHT          = 5;
    EMITTER_KEY_BOX_DEPTH           = 6;
    EMITTER_KEY_PARTICLE_LIFE_TIME  = 7;
    EMITTER_KEY_PARTICLE_SPEED      = 8;
    EMITTER_KEY_PARTICLE_SIZE       = 9;
    EMITTER_KEY_PARTICLE_ALPHA      = 10;
    EMITTER_KEY_COUNT               = 11;
}

enum ParticleKey
{
    PARTICLE_KEY_SCALE      = 0;
    PARTICLE_KEY_ALPHA      = 1;
    PARTICLE_KEY_COUNT      = 2;
}

message Emitter
{
    required PlayMode       mode                = 1;
    optional float          duration            = 2 [default = 0];

    required EmissionSpace  space               = 3;
    required dmMath.Point3  position            = 4;
    required dmMath.Quat    rotation            = 5;

    required Texture_t      texture             = 6;
    required string         material            = 7 [(resource)=true];

    required uint32         max_particle_count  = 8;

    required EmitterType    type                = 9;

    message Property
    {
        required EmitterKey         key     = 1;
        repeated SplinePoint        points  = 2;
    }
    repeated Property properties = 10;

    message ParticleProperty
    {
        required ParticleKey    key     = 1;
        repeated SplinePoint    points  = 2;
    }
    repeated ParticleProperty particle_properties = 11;
}

message ParticleFX
{
    repeated Emitter emitters = 1;
}